# pirp

./: .gitignore  Makefile  README.bashdown  README.md  packages.txt  pyproject.toml  requirements.txt  rip  rip.R
rip/: __init__.py  cli.py  cliactions.py  helpers.py  main.py  version.py
tests/: test_cli.py  test_helpers.py  test_version.py
