[tool.poetry]
name = "pirp"
version = "0.1.0"
description = "pip-like package installation for R"
authors = ["Mark Sellors <github@5vcc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pirp = "pirp:main"
